[project]
name = "zbmathimport"
version = "0.1.0"
description = "Import data from zbmaths into markdown files"
readme = "README.md"
authors = [
    { name = "Julien Ugon", email = "julien.ugon@deakin.edu.au" }
]
requires-python = ">=3.13"
dependencies = [
    "academic>=0.11.2",
    "datetime>=5.5",
    "doi2bib>=0.4.0",
    "requests>=2.32.5",
]


[project.scripts]
zbmathimport = "zbmathimport.cli:main"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"
